BMesh booleans fail with self-overlapping geometry #52425

Closed
opened 2017-08-17 09:56:42 +02:00 by John Thomas · 12 comments

System Information
Win7, nVidia GForce 1060

Blender Version
Broken: 2.79.1 - 66c1b213 (2.78.c is broken also)
Worked: (optional)

Short description of error

In the attached Blend file we have an object named Cover from which we try to extract via Difference Boolean Modifier two objects named Cutout and Cutout 2. With BMesh the thing doesn't work (press Apply - to see faces and vertices artifacts). Choosing Carve as Boolean library it works ok.Blender-difference-bugs.blend

**System Information** Win7, nVidia GForce 1060 **Blender Version** Broken: 2.79.1 - 66c1b213 (2.78.c is broken also) Worked: (optional) **Short description of error** In the attached Blend file we have an object named *Cover* from which we try to extract via Difference Boolean Modifier two objects named *Cutout* and *Cutout 2*. With BMesh the thing doesn't work (press Apply - to see faces and vertices artifacts). Choosing Carve as Boolean library it works ok.[Blender-difference-bugs.blend](https://archive.blender.org/developer/F715196/Blender-difference-bugs.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @m.Th

Added subscriber: @m.Th

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

Yeah, that's true. It's weird, the meshes are also note really broken nor do they have flipped normals, so I don't see why it shouldn't work here.
I also noticed it myself that sometimes Carve works better than BMesh for no apparent reason.

Yeah, that's true. It's weird, the meshes are also note really broken nor do they have flipped normals, so I don't see why it shouldn't work here. I also noticed it myself that sometimes Carve works better than BMesh for no apparent reason.
Author

"Yeahm, that's true" - to quote you. :) "...for no apparent reason" is the thing which disturbs me the most.

Look here: https://developer.blender.org/T52329

I post a very simple case to show a bug in BMesh. It was "fixed" (thaks a lot for the effort, btw) but if I move slightly one of the objects which are one of the parts of the Boolean Operator, the bug surfaces again.

Can we have something more trusty?

How other modelling programs solve this problem?

"Yeahm, that's true" - to quote you. :) "...for no apparent reason" is the thing which disturbs me the most. Look here: https://developer.blender.org/T52329 I post a very simple case to show a bug in BMesh. It was "fixed" (thaks a lot for the effort, btw) but if I move slightly one of the objects which are one of the parts of the Boolean Operator, the bug surfaces again. Can we have something more trusty? How other modelling programs solve this problem?
Author

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Author

@ideasman42 , please, perhaps can you shed a light on this task and on the https://developer.blender.org/T52329 which is closely related?

TIA for your effort!

@ideasman42 , please, perhaps can you shed a light on this task and on the https://developer.blender.org/T52329 which is closely related? TIA for your effort!

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2017-09-12 11:18:38 +02:00

@ideasman42, afraid this one is for you ;)

@ideasman42, afraid this one is for you ;)

There are two problems here:

  • The mesh has degenerate geometry (run degenerate-dissolve tool removes 96 faces)
  • Cover has two exactly overlapping regions (remove doubles removes 48 verts).

This could be supported, but for now you can't put objects exactly side by side and expect them to behave a solid.

There are two problems here: - The mesh has degenerate geometry (run degenerate-dissolve tool removes 96 faces) - `Cover` has two exactly overlapping regions (remove doubles removes 48 verts). This could be supported, but for now you can't put objects exactly side by side and expect them to behave a solid.
Campbell Barton changed title from Difference Boolean Modifier does not work with BMesh. Works with Carve to BMesh booleans fail with self-overlapping geometry 2017-09-12 12:08:58 +02:00

This issue was referenced by de21ab418d

This issue was referenced by de21ab418d69ca82a07ec7c836b1deca09bbd57f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52425
No description provided.